added code to get user meals
