# docs/swagger-output.json
@@ -304,6 +304,19 @@
         }
       }
     },
+    "/api/mealplan": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
     "/api/user": {
       "get": {
         "description": "",
