# src/routes.js
@@ -3,7 +3,7 @@ import * as userControllers from './controllers/userController.js';
 import { validateForm } from "./middleware/formValidation.js";
 import * as authController from "./controllers/authController.js";
 import auth from "./middleware/auth.js";
-import { generateMeal } from "./controllers/mealControllers.js";
+import * as mealControllers from "./controllers/mealControllers.js";
 
 const router = express.Router();
 
@@ -13,7 +13,10 @@ router.post('/login', authController.login);
 router.post('/newprofile', auth, userControllers.createNewProfile);
 router.get('/profile', auth, userControllers.getUserProfile);
 router.put('/updateprofile', auth, userControllers.updateUserProfile);
-router.get('/generatemeal', auth, generateMeal);
+
+router.post('/generatemeal', auth, mealControllers.generateMeal);
+router.get('/mealplan', auth, mealControllers.getMealPlan);
+
 
 router.get('/user', auth, userControllers.getUser);
 router.put('/updateuser', auth, userControllers.updateUser);
